Implemented generating routes.